[package]
authors = ["Andreas Heider <andreas@heider.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for STM32L151 microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32l151-hal"
repository = "https://github.com/ah-/stm32l151-hal"
version = "0.5.0"

[dependencies]
cortex-m = "0.5.7"
nb = "0.1.1"

[dependencies.stm32l1]
features = ["stm32l151", "rt"]
version = "0.3.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.4"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"
