[package]
authors = ["Andreas Heider <andreas@heider.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for STM32L151 microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32l151-hal"
repository = "https://github.com/ah-/stm32l151-hal"
version = "0.8.0"

[dependencies]
cortex-m = "0.6.1"
nb = "0.1.2"

[dependencies.stm32l1]
features = ["stm32l151", "rt"]
version = "0.8.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.10"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"
